Add voice cloning upload support

--- a/index.html
+++ b/index.html
@@ -2686,6 +2686,36 @@
       }
       currentTTSAbortController = new AbortController();
 
+      const vozConfig = VOICE_CONFIG[vozNombre] || getAvailableVoices().find((v) => v.nombre === vozNombre);
+
+      if (!vozConfig) {
+        console.error('❌ Voz no configurada:', vozNombre);
+        if (!silenciarErrores) {
+          mostrarPopupError(`❌ Voz "${vozNombre}" no disponible`);
+        }
+        return null;
+      }
+
+      const isClonedVoice = vozConfig?.isCloned && vozConfig?.audioBase64;
+
+      if (isClonedVoice) {
+        try {
+          const blob = dataUrlToBlob(vozConfig.audioBase64, vozConfig.audioContentType || 'audio/wav');
+          if (!blob) throw new Error('No se pudo reconstruir el audio de la voz clonada');
+          const audioUrl = URL.createObjectURL(blob);
+          const audio = new Audio(audioUrl);
+          audio.playbackRate = velocidad;
+          audio.addEventListener('ended', () => URL.revokeObjectURL(audioUrl), { once: true });
+          setVoiceSystem('browser', vozConfig?.nombre || vozNombre);
+          return audio;
+        } catch (error) {
+          console.error('❌ Error usando la voz clonada local', error);
+          if (!silenciarErrores) {
+            mostrarPopupError('No se pudo usar tu voz clonada. Vuelve a grabarla o súbela de nuevo.');
+          }
+        }
+      }
+
       // VALIDACIÓN ESTRICTA DE API KEY
       let apiKey = userGoogleTTSKey;
       if (!apiKey && currentUser?.uid && isFirebaseAvailable()) {
@@ -2702,16 +2732,6 @@
           setTimeout(() => mostrarApiKeySetupModal(), 500);
         }
         console.error('❌ No se puede reproducir: falta API Key de Google Cloud TTS');
-        return null;
-      }
-
-      const vozConfig = VOICE_CONFIG[vozNombre] || getAvailableVoices().find((v) => v.nombre === vozNombre);
-
-      if (!vozConfig) {
-        console.error('❌ Voz no configurada:', vozNombre);
-        if (!silenciarErrores) {
-          mostrarPopupError(`❌ Voz "${vozNombre}" no disponible`);
-        }
         return null;
       }
 
@@ -4346,6 +4366,36 @@
 
     const VOICES_DATA = Object.values(VOICE_CONFIG);
 
+    const CLONED_VOICE_STORAGE_KEY = 'clonedVoice';
+
+    function upsertClonedVoiceConfig(voice) {
+      if (!voice?.nombre) return;
+      VOICE_CONFIG[voice.nombre] = voice;
+      if (!VOICES_DATA.find((v) => v.nombre === voice.nombre)) {
+        VOICES_DATA.push(voice);
+      }
+    }
+
+    function persistClonedVoiceLocally(voice) {
+      if (!voice) return;
+      try {
+        localStorage.setItem(CLONED_VOICE_STORAGE_KEY, JSON.stringify(voice));
+      } catch (error) {
+        console.warn('No se pudo guardar la voz clonada en localStorage', error);
+      }
+    }
+
+    function getLocalClonedVoice() {
+      const stored = localStorage.getItem(CLONED_VOICE_STORAGE_KEY);
+      if (!stored) return null;
+      try {
+        return JSON.parse(stored);
+      } catch (error) {
+        console.warn('No se pudo parsear la voz clonada almacenada', error);
+        return null;
+      }
+    }
+
     function getVoicesForLanguage(appLanguage, voicesList = Object.values(VOICE_CONFIG)) {
       const primary = (appLanguage || 'es').split('-')[0];
       const preferred = voicesList.filter((voice) => voice.languageCode?.startsWith(primary));
@@ -4454,15 +4504,11 @@
     const getApiStatusLabel = () => document.getElementById('api-status-label');
 
     // ✅ CARGAR VOZ CLONADA SI EXISTE
-    const clonedVoice = localStorage.getItem('clonedVoice');
+    const clonedVoice = getLocalClonedVoice();
     if (clonedVoice) {
       try {
-        const voice = JSON.parse(clonedVoice);
-        VOICE_CONFIG[voice.nombre] = voice;
-        if (!VOICES_DATA.find(v => v.nombre === voice.nombre)) {
-          VOICES_DATA.push(voice);
-        }
-        console.log('✅ Voz clonada restaurada:', voice.nombre);
+        upsertClonedVoiceConfig(clonedVoice);
+        console.log('✅ Voz clonada restaurada:', clonedVoice.nombre);
       } catch (e) {
         console.error('❌ Error cargando voz clonada:', e);
       }
@@ -4618,6 +4664,67 @@
       }
     }
 
+    function applyClonedVoiceConfig(voiceData) {
+      if (!voiceData) return;
+      const safeName = voiceData.nombre || 'Mi Voz Clonada';
+      const voice = {
+        nombre: safeName,
+        desc: voiceData.desc || 'Voz personalizada • Tu voz',
+        avatar: voiceData.avatar || 'https://i.pravatar.cc/150?img=68',
+        googleVoice: voiceData.googleVoice || 'es-ES-Neural2-C',
+        languageCode: voiceData.languageCode || 'es-ES',
+        gender: voiceData.gender || 'NEUTRAL',
+        isCloned: true,
+        audioBase64: voiceData.audioBase64 || voiceData.audioDataUrl || voiceData.audio,
+        audioContentType: voiceData.audioContentType || voiceData.mimeType || 'audio/wav'
+      };
+      upsertClonedVoiceConfig(voice);
+      persistClonedVoiceLocally(voice);
+      return voice;
+    }
+
+    async function blobToDataUrl(blob) {
+      return new Promise((resolve, reject) => {
+        const reader = new FileReader();
+        reader.onloadend = () => resolve(reader.result);
+        reader.onerror = reject;
+        reader.readAsDataURL(blob);
+      });
+    }
+
+    function dataUrlToBlob(dataUrl, defaultType = 'audio/wav') {
+      try {
+        const normalized = dataUrl.startsWith('data:') ? dataUrl : `data:${defaultType};base64,${dataUrl}`;
+        const arr = normalized.split(',');
+        const mime = arr[0].match(/:(.*?);/)[1] || defaultType;
+        const bstr = atob(arr[1]);
+        let n = bstr.length;
+        const u8arr = new Uint8Array(n);
+        while (n--) {
+          u8arr[n] = bstr.charCodeAt(n);
+        }
+        return new Blob([u8arr], { type: mime });
+      } catch (error) {
+        console.error('❌ No se pudo convertir el audio de la voz clonada', error);
+        return null;
+      }
+    }
+
+    async function saveClonedVoiceToFirestore(userId, voiceData) {
+      if (!isFirebaseAvailable()) return;
+      try {
+        await firebase.firestore().collection('users').doc(userId).set({
+          clonedVoice: {
+            ...voiceData,
+            updatedAt: firebase.firestore.FieldValue.serverTimestamp()
+          }
+        }, { merge: true });
+      } catch (error) {
+        console.error('❌ No se pudo guardar la voz clonada en Firestore', error);
+        throw error;
+      }
+    }
+
     async function loadUserSettings(userId) {
       try {
         authLog('📥 Cargando configuración de usuario', { userId });
@@ -4626,6 +4733,9 @@
         userGoogleTTSKey = data.googleTTSKey || await getUserAPIKey(userId);
         setVoiceSystem(userGoogleTTSKey ? 'google' : 'browser');
         const prefs = data.preferences || {};
+        if (data.clonedVoice?.audioBase64 || data.clonedVoice?.audioDataUrl || data.clonedVoice?.audio) {
+          applyClonedVoiceConfig(data.clonedVoice);
+        }
         if (prefs.voice) {
           vozSeleccionada = prefs.voice;
           localStorage.setItem('vozSeleccionada', vozSeleccionada);
@@ -4969,6 +5079,11 @@
                   <button id="stop-recording" class="btn-stop">⏹️ Detener</button>
                 </div>
               </div>
+              <div class="upload-controls" style="margin:12px 0; display:flex; flex-direction:column; gap:6px; align-items:flex-start;">
+                <input type="file" id="cloned-voice-file" accept=".mp3,.wav,.ogg,.m4a,.flac,audio/*" style="display:none;" />
+                <button id="select-voice-file" class="btn-secondary">📁 Subir archivo de audio</button>
+                <small style="color:#666;">Formatos soportados: MP3, WAV, OGG, M4A, FLAC · mínimo 3 segundos.</small>
+              </div>
               <div id="audio-preview" style="display:none;">
                 <audio controls id="recorded-audio"></audio>
                 <button id="upload-voice" class="btn-primary">Crear Voz Clonada</button>
@@ -4990,6 +5105,8 @@
       let audioChunks = [];
       let recordingStartTime;
       let timerInterval;
+      let sourceAudioBlob = null;
+      let sourceAudioUrl = null;
 
       const startBtn = modal.querySelector('#start-recording');
       const stopBtn = modal.querySelector('#stop-recording');
@@ -5001,6 +5118,46 @@
       const progressSection = modal.querySelector('#cloning-progress');
       const progressFill = modal.querySelector('#progress-fill');
       const progressPercent = modal.querySelector('#progress-percent');
+      const fileInput = modal.querySelector('#cloned-voice-file');
+      const selectFileBtn = modal.querySelector('#select-voice-file');
+
+      const acceptedMimeTypes = ['audio/mpeg', 'audio/wav', 'audio/ogg', 'audio/mp4', 'audio/x-m4a', 'audio/flac'];
+
+      const cleanupSourceUrl = () => {
+        if (sourceAudioUrl) {
+          try { URL.revokeObjectURL(sourceAudioUrl); } catch (e) { /* noop */ }
+          sourceAudioUrl = null;
+        }
+      };
+
+      const getAudioDuration = (blob) => new Promise((resolve, reject) => {
+        const tmpUrl = URL.createObjectURL(blob);
+        const probeAudio = new Audio(tmpUrl);
+        probeAudio.addEventListener('loadedmetadata', () => {
+          const duration = probeAudio.duration;
+          URL.revokeObjectURL(tmpUrl);
+          resolve(duration);
+        });
+        probeAudio.addEventListener('error', () => {
+          URL.revokeObjectURL(tmpUrl);
+          reject(new Error('No se pudo leer el audio subido'));
+        });
+      });
+
+      const preparePreviewFromBlob = async (blob) => {
+        const duration = await getAudioDuration(blob);
+        if (!duration || duration < 3) {
+          mostrarPopupError('El audio debe durar al menos 3 segundos.');
+          return false;
+        }
+
+        cleanupSourceUrl();
+        sourceAudioBlob = blob;
+        sourceAudioUrl = URL.createObjectURL(blob);
+        recordedAudio.src = sourceAudioUrl;
+        audioPreview.style.display = 'block';
+        return true;
+      };
 
       startBtn.addEventListener('click', async () => {
         try {
@@ -5012,12 +5169,14 @@
             audioChunks.push(event.data);
           };
 
-          mediaRecorder.onstop = () => {
+          mediaRecorder.onstop = async () => {
             const audioBlob = new Blob(audioChunks, { type: 'audio/wav' });
-            const audioUrl = URL.createObjectURL(audioBlob);
-            recordedAudio.src = audioUrl;
-            audioPreview.style.display = 'block';
-            uploadBtn.dataset.audioBlob = audioUrl;
+            try {
+              await preparePreviewFromBlob(audioBlob);
+            } catch (error) {
+              console.error('❌ Error preparando la grabación', error);
+              mostrarPopupError('No se pudo procesar la grabación.');
+            }
           };
 
           mediaRecorder.start();
@@ -5038,15 +5197,41 @@
       });
 
       stopBtn.addEventListener('click', () => {
+        if (!mediaRecorder || mediaRecorder.state !== 'recording') return;
         mediaRecorder.stop();
         clearInterval(timerInterval);
         timer.style.display = 'none';
         startBtn.style.display = 'block';
       });
 
+      selectFileBtn.addEventListener('click', () => fileInput.click());
+
+      fileInput.addEventListener('change', async (event) => {
+        const file = event.target.files?.[0];
+        if (!file) return;
+
+        if (!file.type?.startsWith('audio/') && !acceptedMimeTypes.includes(file.type)) {
+          mostrarPopupError('Selecciona un archivo de audio válido.');
+          return;
+        }
+
+        try {
+          await preparePreviewFromBlob(file);
+        } catch (error) {
+          console.error('❌ Error leyendo el archivo de audio', error);
+          mostrarPopupError('No se pudo procesar el archivo de audio.');
+        }
+      });
+
       uploadBtn.addEventListener('click', async () => {
+        if (!sourceAudioBlob) {
+          mostrarPopupError('Graba o sube un archivo de audio antes de crear tu voz clonada.');
+          return;
+        }
+
         progressSection.style.display = 'block';
         audioPreview.style.display = 'none';
+        uploadBtn.disabled = true;
 
         let progress = 0;
         const progressInterval = setInterval(() => {
@@ -5056,29 +5241,49 @@
 
           if (progress >= 100) {
             clearInterval(progressInterval);
+          }
+        }, 200);
 
-          const newVoice = {
+        try {
+          const audioDataUrl = await blobToDataUrl(sourceAudioBlob);
+          const newVoice = applyClonedVoiceConfig({
             nombre: 'Mi Voz Clonada',
             desc: 'Voz personalizada • Tu voz',
             avatar: 'https://i.pravatar.cc/150?img=68',
             googleVoice: 'es-ES-Neural2-C',
             languageCode: 'es-ES',
             gender: 'NEUTRAL',
-            isCloned: true
-          };
+            isCloned: true,
+            audioBase64: audioDataUrl,
+            audioContentType: sourceAudioBlob.type || 'audio/wav'
+          });
 
-          // ✅ Añadir a ambas estructuras
-          VOICE_CONFIG['Mi Voz Clonada'] = newVoice;
-          VOICES_DATA.push(newVoice);
-          localStorage.setItem('clonedVoice', JSON.stringify(newVoice));
+          if (!newVoice) {
+            throw new Error('No se pudo registrar la voz clonada');
+          }
+
+          if (currentUser?.uid && isFirebaseAvailable()) {
+            await saveClonedVoiceToFirestore(currentUser.uid, newVoice);
+          }
+
+          vozSeleccionada = newVoice?.nombre || vozSeleccionada;
 
           console.log('✅ Voz clonada añadida correctamente');
 
-            mostrarPopupExito('✅ ¡Voz clonada creada con éxito!');
-            modal.remove();
-            renderVoices();
-          }
-        }, 200);
+          mostrarPopupExito('✅ ¡Voz clonada creada con éxito!');
+          cleanupSourceUrl();
+          modal.remove();
+          renderVoices();
+        } catch (error) {
+          console.error('❌ No se pudo crear la voz clonada', error);
+          mostrarPopupError('No se pudo crear la voz clonada. Inténtalo nuevamente.');
+        } finally {
+          clearInterval(progressInterval);
+          progressFill.style.width = '100%';
+          progressPercent.textContent = '100%';
+          uploadBtn.disabled = false;
+          setTimeout(() => { progressSection.style.display = 'none'; }, 500);
+        }
       });
     }
 
@@ -5302,7 +5507,16 @@
       console.log('▶️ Iniciando lectura:', documentoActivo.titulo);
       togglePlayButtonLoading(true);
 
-      if (!userGoogleTTSKey && !hasAPIKeySkipPreference()) {
+      const vozConfig = VOICE_CONFIG[vozSeleccionada] || getAvailableVoices().find((v) => v.nombre === vozSeleccionada);
+      const isClonedVoice = vozConfig?.isCloned && vozConfig?.audioBase64;
+
+      if (!vozConfig) {
+        mostrarPopupError('La voz seleccionada no está disponible.');
+        togglePlayButtonLoading(false);
+        return;
+      }
+
+      if (!userGoogleTTSKey && !hasAPIKeySkipPreference() && !isClonedVoice) {
         mostrarPopupError('🔑 Configura tu API Key de Google Cloud TTS para usar voces naturales');
         mostrarApiKeySetupModal();
         togglePlayButtonLoading(false);
@@ -5317,8 +5531,6 @@
       palabrasTotales = palabraElements.length;
 
       console.log(`📝 ${palabrasTotales} palabras preparadas`);
-
-      const vozConfig = VOICE_CONFIG[vozSeleccionada] || getAvailableVoices().find((v) => v.nombre === vozSeleccionada);
 
       try {
         if (!userGoogleTTSKey && hasAPIKeySkipPreference()) {
@@ -5377,7 +5589,7 @@
         }
       };
 
-      if (!userGoogleTTSKey && hasAPIKeySkipPreference()) {
+      if ((!userGoogleTTSKey && hasAPIKeySkipPreference()) || vozConfig?.isCloned) {
         audioElement.addEventListener('timeupdate', actualizarProgresoBasico);
       }
 
