--- a/index.html
+++ b/index.html
@@ -4729,9 +4729,29 @@
     async function saveClonedVoiceToFirestore(userId, voiceData) {
       if (!isFirebaseAvailable()) return;
       try {
+        const allowedKeys = [
+          'nombre',
+          'desc',
+          'avatar',
+          'googleVoice',
+          'languageCode',
+          'gender',
+          'isCloned',
+          'audioBase64',
+          'audioContentType'
+        ];
+
+        const cleanedVoiceData = Object.fromEntries(
+          Object.entries(voiceData || {}).filter(([key, value]) => {
+            const isAllowedKey = allowedKeys.includes(key);
+            const isSerializableValue = typeof value === 'string' || typeof value === 'boolean';
+            return isAllowedKey && value !== undefined && value !== null && isSerializableValue;
+          })
+        );
+
         await firebase.firestore().collection('users').doc(userId).set({
           clonedVoice: {
-            ...voiceData,
+            ...cleanedVoiceData,
             updatedAt: firebase.firestore.FieldValue.serverTimestamp()
           }
         }, { merge: true });
