Add separate help links for API credentials

--- a/index.html
+++ b/index.html
@@ -1520,9 +1520,10 @@
       <p style="margin-top:0; color:#555;">Para usar las voces de Google Text-to-Speech, necesitas configurar tu propia API key.</p>
       <label for="google-tts-api-key-input" style="display:block; font-weight:600; margin-top:12px;">API Key de Google TTS:</label>
       <input type="text" id="google-tts-api-key-input" placeholder="AIzaSy..." style="width:100%; padding:10px 12px; margin-top:6px; border-radius:10px; border:1px solid #ddd;">
+      <a href="https://cloud.google.com/text-to-speech/docs/before-you-begin" target="_blank" style="display:inline-block; margin:6px 0 10px; color:#1a73e8;">¿Cómo obtener Google TTS API Key?</a>
       <label for="huggingface-token-input" style="display:block; font-weight:600; margin-top:12px;">Hugging Face Token:</label>
       <input type="text" id="huggingface-token-input" placeholder="hf_xxx" style="width:100%; padding:10px 12px; margin-top:6px; border-radius:10px; border:1px solid #ddd;">
-      <a href="https://cloud.google.com/text-to-speech/docs/before-you-begin" target="_blank" style="display:inline-block; margin:10px 0; color:#1a73e8;">¿Cómo obtener una API key?</a>
+      <a href="https://huggingface.co/settings/tokens" target="_blank" style="display:inline-block; margin:6px 0 10px; color:#1a73e8;">¿Cómo obtener Hugging Face Token?</a>
       <div style="display:flex; gap:10px; justify-content:flex-end; margin-top:14px; align-items:center;">
         <div id="api-key-inline-loader" style="display:none; align-items:center; gap:6px; color:#FF9500; font-weight:700;">
           <span class="inline-spinner" style="border-color: rgba(255,149,0,0.35); border-top-color:#FF9500;"></span>
