--- a/index.html
+++ b/index.html
@@ -382,6 +382,51 @@
     .icono-config { width: 42px; height: 42px; border-radius: 50%; background: #FFF3E0; display: grid; place-items: center; font-size: 18px; color: var(--naranja-botones); box-shadow: inset 0 0 0 1px #FFE0B2; }
     .config-item span { font-size: 16px; font-weight: 600; }
     .valor-actual, .flecha { margin-left: auto; color: #666; font-size: 14px; font-weight: 600; }
+
+    .toggle-switch {
+      position: relative;
+      display: inline-block;
+      width: 50px;
+      height: 24px;
+    }
+
+    .toggle-switch input {
+      opacity: 0;
+      width: 0;
+      height: 0;
+    }
+
+    .toggle-slider {
+      position: absolute;
+      cursor: pointer;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: #ccc;
+      transition: 0.4s;
+      border-radius: 24px;
+    }
+
+    .toggle-slider:before {
+      position: absolute;
+      content: "";
+      height: 18px;
+      width: 18px;
+      left: 3px;
+      bottom: 3px;
+      background-color: white;
+      transition: 0.4s;
+      border-radius: 50%;
+    }
+
+    input:checked + .toggle-slider {
+      background-color: var(--naranja-botones);
+    }
+
+    input:checked + .toggle-slider:before {
+      transform: translateX(26px);
+    }
     .cuenta-item { display: flex; align-items: center; gap: 10px; padding: 12px; border-top: 1px solid var(--borde-gris); }
     .cuenta-resumen { gap: 12px; cursor: default; justify-content: space-between; }
     .cuenta-resumen__contenido { display: flex; flex-direction: column; gap: 4px; flex: 1; }
@@ -1219,10 +1264,15 @@
               <span data-i18n="settings.hfToken">Token de Hugging Face</span>
               <span class="valor-actual" id="hf-status-label">Sin configurar</span>
             </div>
-            <div class="config-item" data-action="config-firebase">
-              <div class="icono-config">☁️</div>
-              <span data-i18n="settings.firebaseProject">Proyecto Firebase</span>
-              <span class="valor-actual" id="firebase-status-label">Sin configurar</span>
+            <div class="config-item" style="justify-content: space-between;">
+              <div style="display: flex; align-items: center; gap: 12px;">
+                <div class="icono-config">☁️</div>
+                <span>Sincronización Multi-dispositivo</span>
+              </div>
+              <label class="toggle-switch">
+                <input type="checkbox" id="multi-device-sync-toggle" checked>
+                <span class="toggle-slider"></span>
+              </label>
             </div>
             <div class="config-item" data-action="cambiar-voz">
               <div class="icono-config">🔊</div>
@@ -1535,6 +1585,24 @@
     </div>
   </div>
 
+  <!-- Modal de advertencia de sincronización -->
+  <div id="sync-warning-modal" class="modal-overlay" style="display:none;">
+    <div class="popup-confirmacion">
+      <h3>⚠️ Desactivar Sincronización</h3>
+      <p style="margin-bottom: 12px;">Si desactivas la sincronización multi-dispositivo:</p>
+      <ul style="text-align: left; margin: 16px 0; padding-left: 20px; line-height: 1.6;">
+        <li>Tus documentos solo se guardarán en este dispositivo</li>
+        <li>No podrás acceder a ellos desde otros dispositivos</li>
+        <li>Si borras los datos del navegador, perderás todo tu contenido</li>
+      </ul>
+      <p style="margin-top: 16px;"><strong>¿Estás seguro que quieres continuar?</strong></p>
+      <div class="popup-actions">
+        <button class="btn-cancel" id="cancel-sync-disable">Cancelar</button>
+        <button class="btn-confirm" id="confirm-sync-disable">Desactivar</button>
+      </div>
+    </div>
+  </div>
+
   <script type="module">
     let userGoogleTTSKey = null;
     let huggingFaceToken = null;
@@ -1549,6 +1617,7 @@
     const HF_TOKEN_STORAGE_KEY = 'hfToken_guest';
     const GUEST_SKIP_API_KEY_KEY = 'skipAPIKey_guest';
     const SHARE_APP_URL = 'https://mrdaniel7.github.io/speaker/';
+    const MULTI_DEVICE_SYNC_KEY = 'multiDeviceSyncEnabled';
 
     const LEGACY_FIREBASE_CONFIG = {
       apiKey: "AIzaSyAsp5EL1SMvbD80F2bcJim9p62ceYwfgqc",
@@ -1801,6 +1870,65 @@
     const maskPassword = (password = '') => '*'.repeat(Math.min(password.length, 12));
     const wait = (ms) => new Promise((resolve) => setTimeout(resolve, ms));
     const retryableAuthErrors = ['auth/network-request-failed', 'auth/internal-error', 'auth/too-many-requests'];
+
+    // ===== SINCRONIZACIÓN MULTI-DISPOSITIVO TOGGLE =====
+    function loadSyncPreference() {
+      const saved = localStorage.getItem(MULTI_DEVICE_SYNC_KEY);
+      return saved === null ? true : saved === 'true';
+    }
+
+    function saveSyncPreference(enabled) {
+      localStorage.setItem(MULTI_DEVICE_SYNC_KEY, enabled.toString());
+      console.log(`🔄 Sincronización ${enabled ? 'ACTIVADA' : 'DESACTIVADA'}`);
+
+      if (enabled && currentUser?.uid && isFirebaseAvailable()) {
+        syncUserDocuments(currentUser.uid);
+      } else if (!enabled) {
+        stopFirestoreListener();
+      }
+    }
+
+    function initSyncToggle() {
+      const syncToggle = document.getElementById('multi-device-sync-toggle');
+      const syncWarningModal = document.getElementById('sync-warning-modal');
+
+      if (!syncToggle || !syncWarningModal) return;
+
+      syncToggle.checked = loadSyncPreference();
+
+      syncToggle.addEventListener('change', (e) => {
+        if (!e.target.checked) {
+          e.target.checked = true;
+          syncWarningModal.style.display = 'flex';
+          syncWarningModal.classList.add('active');
+        } else {
+          saveSyncPreference(true);
+          mostrarPopupExito('✅ Sincronización multi-dispositivo activada');
+        }
+      });
+
+      document.getElementById('cancel-sync-disable')?.addEventListener('click', () => {
+        syncToggle.checked = true;
+        syncWarningModal.style.display = 'none';
+        syncWarningModal.classList.remove('active');
+      });
+
+      document.getElementById('confirm-sync-disable')?.addEventListener('click', () => {
+        syncToggle.checked = false;
+        saveSyncPreference(false);
+        syncWarningModal.style.display = 'none';
+        syncWarningModal.classList.remove('active');
+        mostrarPopupExito('Sincronización desactivada. Datos guardados solo localmente.');
+      });
+
+      syncWarningModal.addEventListener('click', (e) => {
+        if (e.target === syncWarningModal) {
+          syncToggle.checked = true;
+          syncWarningModal.style.display = 'none';
+          syncWarningModal.classList.remove('active');
+        }
+      });
+    }
 
     const TRANSLATIONS = {
       'es': {
@@ -3385,7 +3513,8 @@
       });
       if (!current) return;
       const putReq = store.put({ ...current, ...updates });
-      const shouldSync = isAuthenticated() && current.userId === currentUser.uid;
+      const syncEnabled = loadSyncPreference();
+      const shouldSync = syncEnabled && isAuthenticated() && current.userId === currentUser.uid;
       return new Promise((resolve, reject) => {
         putReq.onsuccess = () => tx.oncomplete = async () => {
           if (shouldSync) {
@@ -3405,7 +3534,8 @@
       const db = await openDB();
       const tx = db.transaction('documentos', 'readwrite');
       const delReq = tx.objectStore('documentos').delete(id);
-      const shouldSync = isAuthenticated() && !!id;
+      const syncEnabled = loadSyncPreference();
+      const shouldSync = syncEnabled && isAuthenticated() && !!id;
       return new Promise((resolve, reject) => {
         delReq.onsuccess = () => tx.oncomplete = async () => {
           if (shouldSync) {
@@ -4246,6 +4376,10 @@
     }
 
     async function syncUserDocuments(userId) {
+      if (!loadSyncPreference()) {
+        console.log('⏸️ Sincronización desactivada. No se cargarán documentos desde Firebase.');
+        return;
+      }
       try {
         if (!isAuthenticated()) return;
         toggleLoader(true, 'Cargando tu biblioteca', 'Sincronizando documentos de tu cuenta...');
@@ -4266,7 +4400,7 @@
     }
 
     async function migrateGuestDocumentsToFirestore(userId) {
-      if (!isAuthenticated() || !userId) return;
+      if (!isAuthenticated() || !userId || !loadSyncPreference()) return;
       const localGuestDocs = await getDocumentos('guest');
       if (!localGuestDocs.length) return;
 
@@ -4292,6 +4426,7 @@
 
     async function guardarDocumentoUsuario(doc) {
       const userId = currentUser?.uid || 'guest';
+      const syncEnabled = loadSyncPreference();
       const docData = {
         userId: userId,
         title: doc.titulo,
@@ -4309,13 +4444,13 @@
       };
 
       try {
-        if (isAuthenticated() && currentUser?.uid) {
+        if (syncEnabled && isAuthenticated() && currentUser?.uid) {
           const firestoreId = await saveUserDocument(currentUser.uid, docData);
           const localDoc = { ...doc, id: firestoreId, userId: currentUser.uid };
           await addDocumento(localDoc);
           documentos = await getDocumentos(currentUser.uid);
           renderDocumentos();
-          mostrarPopupExito('Documento guardado en tu cuenta');
+          mostrarPopupExito('Documento guardado y sincronizado');
           return firestoreId;
         }
 
@@ -4502,11 +4637,18 @@
         updateAccountInfo(user);
 
         if (user) {
+          const syncEnabled = loadSyncPreference();
           showMainApp();
           try {
             await ensureUserSettings(user.uid, user.email || currentUser?.email, false);
-            await migrateGuestDocumentsToFirestore(user.uid);
-            await syncUserDocuments(user.uid);
+            if (syncEnabled) {
+              await migrateGuestDocumentsToFirestore(user.uid);
+              await syncUserDocuments(user.uid);
+            } else {
+              stopFirestoreListener();
+              documentos = await getDocumentos(user.uid);
+              renderDocumentos();
+            }
             await loadUserSettings(user.uid);
             await inicializarAPIKey();
             await verificarYMostrarPopupAPIKey();
@@ -6764,6 +6906,8 @@
           showLoginScreen();
         }
 
+        initSyncToggle();
+
         bindCardEvents();
         setupAuthListeners();
         updateFirebaseStatusLabel(firebaseConfigInUse?.projectId || (isFirebaseAvailable() ? t('settings.googleApi.status.configured') : null));
@@ -6810,12 +6954,6 @@
         document.querySelectorAll('[data-action="config-hf"]').forEach((el) => {
           el.addEventListener('click', () => {
             mostrarApiKeySetupModal();
-          });
-        });
-
-        document.querySelectorAll('[data-action="config-firebase"]').forEach((el) => {
-          el.addEventListener('click', () => {
-            mostrarPopupExito('La app está funcionando en modo local. Firebase no es obligatorio.');
           });
         });
 
