--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-storage-compat.js"></script>
   <style>
     :root {
       --amarillo-principal: #FFB800;
@@ -2988,12 +2989,29 @@
       }
 
       const isClonedVoice = vozConfig?.isCloned === true;
-      const hasClonedAudio = !!vozConfig?.audioBase64;
+      let hasClonedAudio = !!vozConfig?.audioBase64;
       const textoLimpio = (texto ?? '').replace(/[\u0000-\u001F\u007F-\u009F]/g, '').trim();
 
       if (isClonedVoice) {
         console.log('🎙️ Voz clonada detectada:', vozConfig.nombre);
         console.log('📦 Audio base64 presente:', hasClonedAudio);
+
+        if (!hasClonedAudio && vozConfig?.audioURL) {
+          try {
+            const fetchedAudio = await fetchAudioDataUrlFromUrl(
+              vozConfig.audioURL,
+              vozConfig.audioContentType || 'audio/wav'
+            );
+            if (fetchedAudio) {
+              vozConfig.audioBase64 = fetchedAudio;
+              hasClonedAudio = true;
+              upsertClonedVoiceConfig(vozConfig);
+              persistClonedVoiceLocally(vozConfig);
+            }
+          } catch (error) {
+            console.error('❌ No se pudo recuperar el audio de la voz clonada desde Storage', error);
+          }
+        }
 
         if (!hasClonedAudio) {
           console.error('❌ La voz clonada no tiene audio disponible');
@@ -5205,10 +5223,23 @@
         gender: voiceData.gender || 'NEUTRAL',
         isCloned: true,
         audioBase64: voiceData.audioBase64 || voiceData.audioDataUrl || voiceData.audio,
+        audioURL: voiceData.audioURL,
         audioContentType: voiceData.audioContentType || voiceData.mimeType || 'audio/wav'
       };
       upsertClonedVoiceConfig(voice);
       persistClonedVoiceLocally(voice);
+
+      if (!voice.audioBase64 && voice.audioURL) {
+        fetchAudioDataUrlFromUrl(voice.audioURL, voice.audioContentType)
+          .then((dataUrl) => {
+            if (!dataUrl) return;
+            voice.audioBase64 = dataUrl;
+            upsertClonedVoiceConfig(voice);
+            persistClonedVoiceLocally(voice);
+          })
+          .catch((error) => console.error('❌ No se pudo recuperar el audio de la voz clonada', error));
+      }
+
       return voice;
     }
 
@@ -5219,6 +5250,21 @@
         reader.onerror = reject;
         reader.readAsDataURL(blob);
       });
+    }
+
+    async function fetchAudioDataUrlFromUrl(audioURL, defaultType = 'audio/wav') {
+      try {
+        const response = await fetch(audioURL);
+        if (!response.ok) throw new Error(`HTTP ${response.status}`);
+        const blob = await response.blob();
+        if (!blob?.type && defaultType) {
+          return blobToDataUrl(new Blob([await blob.arrayBuffer()], { type: defaultType }));
+        }
+        return blobToDataUrl(blob);
+      } catch (error) {
+        console.error('❌ Error obteniendo audio desde URL', error);
+        return null;
+      }
     }
 
     function dataUrlToBlob(dataUrl, defaultType = 'audio/wav') {
@@ -5240,34 +5286,46 @@
     }
 
     async function saveClonedVoiceToFirestore(userId, voiceData) {
-      if (!isFirebaseAvailable()) return;
+      if (!isFirebaseAvailable()) return null;
       try {
-        const allowedKeys = [
-          'nombre',
-          'desc',
-          'avatar',
-          'googleVoice',
-          'languageCode',
-          'gender',
-          'isCloned',
-          'audioBase64',
-          'audioContentType'
-        ];
+        const audioSource = voiceData?.audioBase64 || voiceData?.audioDataUrl || voiceData?.audio;
+        let audioBlob = null;
 
-        const cleanedVoiceData = Object.fromEntries(
-          Object.entries(voiceData || {}).filter(([key, value]) => {
-            const isAllowedKey = allowedKeys.includes(key);
-            const isSerializableValue = typeof value === 'string' || typeof value === 'boolean';
-            return isAllowedKey && value !== undefined && value !== null && isSerializableValue;
-          })
-        );
+        if (audioSource instanceof Blob) {
+          audioBlob = audioSource;
+        } else if (typeof audioSource === 'string') {
+          audioBlob = dataUrlToBlob(audioSource, voiceData?.audioContentType || 'audio/wav');
+        }
+
+        if (!audioBlob) {
+          throw new Error('No se encontró audio válido para la voz clonada');
+        }
+
+        const storageRef = firebase.storage().ref();
+        const voiceRef = storageRef.child(`users/${userId}/clonedVoice_${Date.now()}.wav`);
+        await voiceRef.put(audioBlob);
+        const downloadURL = await voiceRef.getDownloadURL();
+
+        const cleanedVoiceData = {
+          nombre: voiceData?.nombre || 'Mi Voz Clonada',
+          desc: voiceData?.desc || 'Voz personalizada • Tu voz',
+          avatar: voiceData?.avatar || 'https://i.pravatar.cc/150?img=68',
+          googleVoice: voiceData?.googleVoice || 'es-ES-Neural2-C',
+          languageCode: voiceData?.languageCode || 'es-ES',
+          gender: voiceData?.gender || 'NEUTRAL',
+          isCloned: true,
+          audioURL: downloadURL
+        };
 
         await firebase.firestore().collection('users').doc(userId).set({
           clonedVoice: {
             ...cleanedVoiceData,
+            createdAt: firebase.firestore.FieldValue.serverTimestamp(),
             updatedAt: firebase.firestore.FieldValue.serverTimestamp()
           }
         }, { merge: true });
+
+        return downloadURL;
       } catch (error) {
         console.error('❌ No se pudo guardar la voz clonada en Firestore', error);
         throw error;
@@ -5283,7 +5341,7 @@
         huggingFaceToken = data.hfToken || data.huggingFaceToken || await getUserHFToken(userId) || getGuestHFToken();
         setVoiceSystem(userGoogleTTSKey ? 'google' : 'browser');
         const prefs = data.preferences || {};
-        if (data.clonedVoice?.audioBase64 || data.clonedVoice?.audioDataUrl || data.clonedVoice?.audio) {
+        if (data.clonedVoice?.audioBase64 || data.clonedVoice?.audioDataUrl || data.clonedVoice?.audio || data.clonedVoice?.audioURL) {
           applyClonedVoiceConfig(data.clonedVoice);
         }
         if (prefs.voice) {
@@ -5814,7 +5872,12 @@
           }
 
           if (currentUser?.uid && isFirebaseAvailable()) {
-            await saveClonedVoiceToFirestore(currentUser.uid, newVoice);
+            const audioURL = await saveClonedVoiceToFirestore(currentUser.uid, newVoice);
+            if (audioURL) {
+              newVoice.audioURL = audioURL;
+              upsertClonedVoiceConfig(newVoice);
+              persistClonedVoiceLocally(newVoice);
+            }
           }
 
           vozSeleccionada = newVoice?.nombre || vozSeleccionada;
@@ -6059,7 +6122,7 @@
       togglePlayButtonLoading(true);
 
       const vozConfig = VOICE_CONFIG[vozSeleccionada] || getAvailableVoices().find((v) => v.nombre === vozSeleccionada);
-      const isClonedVoice = vozConfig?.isCloned && vozConfig?.audioBase64;
+      const isClonedVoice = vozConfig?.isCloned && (vozConfig?.audioBase64 || vozConfig?.audioURL);
 
       if (!vozConfig) {
         mostrarPopupError('La voz seleccionada no está disponible.');
